feat: add ImpresionManual component with basic template and styles (#53)
* Refactor synchronization logic and enhance footer component; update sync status handling

* Refactor sync status handling; use environment variable for sync interval and implement computed signal for image status

* Enhance configuraciones component: add router navigation after successful update and improve UI styling for modulo display

* Ajustar diseño de componentes y mejorar la estructura del footer; optimizar espaciado en consulta y menú

* Refactor configuraciones and datos-generales components to improve navigation and data synchronization; enhance modalidades service for offline support

* Add offline support for postal code retrieval and improve module selection feedback

* Refactor postal code retrieval to streamline function calls and enhance async handling

* Mejora la función de obtención de códigos postales para manejar correctamente los municipios y optimiza el filtrado de resultados.

* Refactor postal code filtering logic to simplify code and improve readability

* Add photo ID to Aspirante model, update navigation and enhance photo handling in Foto component

* Add logging for aspirante photo retrieval, remove unused Jalisco interface, and include event date in form data

* Refactor photo handling in Foto component: streamline form editing process and enhance logging in aspirante service

* Implementar creación y actualización de fotos en el componente Foto: registrar nueva foto en la base de datos y actualizar relación con el aspirante

* Agregar funcionalidad para subir fotos al servidor en el componente Foto: registrar nueva foto y mejorar manejo de errores

* Corregir acceso al ID de la foto en la respuesta del servicio y agregar funcionalidad para guardar la foto en el directorio local antes de subirla al servidor

* editar registro y foto completo

* Actualizar el componente de inicio de sesión con credenciales predeterminadas y agregar funcionalidad para la carga de a

--- a/src/app/pages/home/components/foto/foto.component.html
+++ b/src/app/pages/home/components/foto/foto.component.html
@@ -59,7 +59,7 @@
       </button>
 
       <!-- Register button -->
-      @if(!datosGeneralesComponent.editar) {
+      @if(!datosGeneralesComponent?.editar) {
       <button (click)="onSubmit()" [disabled]="!capturedImage"
         class="rounded-full w-3/4 flex flex-col items-center justify-center bg-blue-500 hover:bg-blue-600 text-xs text-white text-center font-bold p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -72,7 +72,7 @@
         </svg>
         Registrar
       </button>
-      } @else{
+      } @else if(datosGeneralesComponent?.editar) {
       <button (click)="onEdit()"
         class="rounded-full w-3/4 flex flex-col items-center justify-center bg-rose-500 hover:bg-blue-600 text-xs text-white text-center font-bold p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -84,6 +84,19 @@
           <path d="M16 5l3 3" />
         </svg>
         Editar
+      </button>
+      } @else {
+      <button (click)="onSubmit()" [disabled]="!capturedImage"
+        class="rounded-full w-3/4 flex flex-col items-center justify-center bg-blue-500 hover:bg-blue-600 text-xs text-white text-center font-bold p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+          stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+          class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right-to-arc">
+          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+          <path d="M3 12h12" />
+          <path d="M11 8l4 4l-4 4" />
+          <path d="M12 21a9 9 0 0 0 0 -18" />
+        </svg>
+        Registrar
       </button>
       }
 
@@ -99,7 +112,7 @@
         </div>
         <div class="w-full p-3 overflow-hidden" [class.opacity-50]="!isCheckboxChecked" [class.pointer-events-none]="!isCheckboxChecked">
           <div
-            class="relative border-dotted h-10 rounded-lg border-dashed border-2 border-blue-700 bg-gray-100 flex justify-center items-center">
+            class="relative border-dotted h-10 rounded-lg border-2 border-blue-700 bg-gray-100 flex justify-center items-center">
 
             <div class="absolute">
               <div [ngClass]="{'flex gap-2 items-center': true, 'text-blue-400': lblUploadingFile, 'text-gray-400': !lblUploadingFile}">
