--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -10,11 +10,10 @@
           ruta="/inicio/acciones" [accion]="cerrarMenu.bind(this)"
           icono='<path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M7 4v16l13 -8z" />'></app-opcion-menu>
 
-        <a routerLink="/inicio/impresion-manuales" routerLinkActive="router-link-active"
-          routerLinkActive="bg-[#f26507]/50" class="px-4 py-2 text-lg rounded-md font-bold flex gap-3 justify-around text-gray-700">
-          <svg  xmlns="http://www.w3.org/2000/svg"  width="32"  height="32"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-credit-card"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 5m0 3a3 3 0 0 1 3 -3h12a3 3 0 0 1 3 3v8a3 3 0 0 1 -3 3h-12a3 3 0 0 1 -3 -3z" /><path d="M3 10l18 0" /><path d="M7 15l.01 0" /><path d="M11 15l2 0" /></svg>
-          Impr Manual
-        </a>
+        <app-opcion-menu *ngIf="permisoOpcionMenu(opcionesMenu, 'menu_habilitar_impr_manual')" texto="Impr Manual"
+          ruta="/inicio/impresion-manuales" [accion]="cerrarMenu.bind(this)"
+          icono='<path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 5m0 3a3 3 0 0 1 3 -3h12a3 3 0 0 1 3 3v8a3 3 0 0 1 -3 3h-12a3 3 0 0 1 -3 -3z" /><path d="M3 10l18 0" /><path d="M7 15l.01 0" /><path d="M11 15l2 0" />'></app-opcion-menu>
+
 
         <app-opcion-menu *ngIf="permisoOpcionMenu(opcionesMenu, 'menu_habilitar_asistencia')" texto="Asistencia"
           ruta="/inicio/asistencia" [accion]="cerrarMenu.bind(this)"
