--- a/src/app/pages/impresionManual/impresionManual.component.html
+++ b/src/app/pages/impresionManual/impresionManual.component.html
@@ -4,7 +4,7 @@
 
 
     <div class="basis-5/8">
-      <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
+      <form [formGroup]="formulario" (ngSubmit)="printManual()">
         <div class="px-6 py-5 bg-[#ef8019] border-0 shadow-lg sm:rounded-3xl max-w-3xl mx-auto">
 
           <div class="grid grid-cols-3 gap-4 *:text-white items-end">
@@ -38,7 +38,7 @@
               <div class="flex flex-col">
                 <label>Nombre del beneficiario:</label>
                 <input class="text-slate-800 py-1 px-2 bg-white rounded-sm h-8" type="text"
-                  formControlName="nombreBeneficiario" id="">
+                  formControlName="nombreBeneficiario" id="" (input)="toUpperCaseName($event)">
                 <div
                   *ngIf="formulario.get('nombreBeneficiario')?.invalid && formulario.get('nombreBeneficiario')?.touched">
                   <small class="text-white">El nombre es requerido y debe tener al menos 1 carácter.</small>
@@ -46,7 +46,7 @@
               </div>
               <div class="flex flex-col">
                 <label>CURP:</label>
-                <input class="text-slate-800 py-1 px-2 bg-white rounded-sm h-8" type="text" formControlName="curp"
+                <input class="text-slate-800 py-1 px-2 bg-white rounded-sm h-8" type="text" formControlName="curp" (input)="toUpperCaseCurp($event)"
                   id="">
                 <div *ngIf="formulario.get('curp')?.invalid && formulario.get('curp')?.touched">
                   <small class="text-white">La CURP es requerida, debe tener 18 caracteres y cumplir con el formato.</small>
@@ -143,18 +143,11 @@
                 <span class="sr-only">Capture photo</span>
               </button>
 
-              <button (click)="notifyParent()" [disabled]="formulario.invalid"
+              <button (click)="printManual()" [disabled]="formulario.invalid && !capturedImage()"
                 class="rounded-full w-3/4 flex flex-col items-center justify-center bg-blue-500 hover:bg-blue-600 text-xs text-white text-center font-bold p-2 focus:outline-none focus:ring-2 focus:ring-blue-500 disabled:opacity-50 disabled:cursor-not-allowed">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                  class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-right-to-arc">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                  <path d="M3 12h12" />
-                  <path d="M11 8l4 4l-4 4" />
-                  <path d="M12 21a9 9 0 0 0 0 -18" />
-                </svg>
+                <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-printer"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M17 17h2a2 2 0 0 0 2 -2v-4a2 2 0 0 0 -2 -2h-14a2 2 0 0 0 -2 2v4a2 2 0 0 0 2 2h2" /><path d="M17 9v-4a2 2 0 0 0 -2 -2h-6a2 2 0 0 0 -2 2v4" /><path d="M7 13m0 2a2 2 0 0 1 2 -2h6a2 2 0 0 1 2 2v4a2 2 0 0 1 -2 2h-6a2 2 0 0 1 -2 -2z" /></svg>
                 <span>
-                  {{ buttonTitle }}
+                  Imprimir Tarjeta
                 </span>
               </button>
             </div>
