feat: actualiza validación del nombre beneficiario a un mínimo de 4 caracteres feat: agrega método para obtener opciones de menú en configuraciones

--- a/src/app/pages/impresionManual/impresionManual.component.html
+++ b/src/app/pages/impresionManual/impresionManual.component.html
@@ -41,7 +41,7 @@
                   formControlName="nombreBeneficiario" id="" (input)="toUpperCaseName($event)">
                 <div
                   *ngIf="formulario.get('nombreBeneficiario')?.invalid && formulario.get('nombreBeneficiario')?.touched">
-                  <small class="text-white">El nombre es requerido y debe tener al menos 1 carácter.</small>
+                  <small class="text-white">El nombre es requerido y debe tener al menos 4 carácteres.</small>
                 </div>
               </div>
               <div class="flex flex-col">
