--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -6,6 +6,14 @@
       <div x-show="open" click.away="open = false"
         class="mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 px-2 py-2 *:text-end">
 
+        <app-opcion-menu *ngIf="permisoOpcionMenu(opcionesMenu, 'menu_habilitar_digitalizador')" texto="Digitalizador"
+          ruta="/inicio/digitalizador" [accion]="cerrarMenu.bind(this)"
+          icono='<path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 8v-2a2 2 0 0 1 2 -2h2" /><path d="M4 16v2a2 2 0 0 0 2 2h2" /><path d="M16 4h2a2 2 0 0 1 2 2v2" /><path d="M16 20h2a2 2 0 0 0 2 -2v-2" /><path d="M8 12h8" /><path d="M8 9h6" /><path d="M8 15h4" />'></app-opcion-menu>
+
+        <app-opcion-menu *ngIf="permisoOpcionMenu(opcionesMenu, 'menu_habilitar_cortes')" texto="Cortes"
+          ruta="/inicio/cortes" [accion]="cerrarMenu.bind(this)"
+          icono='<path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M14 3v4a1 1 0 0 0 1 1h4" /><path d="M19 12v7a1.78 1.78 0 0 1 -3.1 1.4a1.65 1.65 0 0 0 -2.6 0a1.65 1.65 0 0 1 -2.6 0a1.65 1.65 0 0 0 -2.6 0a1.78 1.78 0 0 1 -3.1 -1.4v-14a2 2 0 0 1 2 -2h7l5 5v4.25" />'></app-opcion-menu>
+
         <app-opcion-menu *ngIf="permisoOpcionMenu(opcionesMenu, 'menu_habilitar_acciones')" texto="Acciones"
           ruta="/inicio/acciones" [accion]="cerrarMenu.bind(this)"
           icono='<path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M7 4v16l13 -8z" />'></app-opcion-menu>
