--- a/src/app/pages/impresionManual/impresionManual.component.html
+++ b/src/app/pages/impresionManual/impresionManual.component.html
@@ -41,7 +41,7 @@
                   formControlName="nombreBeneficiario" id="" (input)="toUpperCaseName($event)">
                 <div
                   *ngIf="formulario.get('nombreBeneficiario')?.invalid && formulario.get('nombreBeneficiario')?.touched">
-                  <small class="text-white">El nombre es requerido y debe tener al menos 4 carácteres.</small>
+                  <small class="text-gray-700">El nombre es requerido y debe tener al menos 4 carácteres.</small>
                 </div>
               </div>
               <div class="flex flex-col">
@@ -49,7 +49,7 @@
                 <input class="text-slate-800 py-1 px-2 bg-white rounded-sm h-8" type="text" formControlName="curp"
                   (input)="toUpperCaseCurp($event)" id="" maxlength="18" minlength="18">
                 <div *ngIf="formulario.get('curp')?.invalid && formulario.get('curp')?.touched">
-                  <small class="text-white">La CURP es requerida, debe tener 18 caracteres y cumplir con el
+                  <small class="text-gray-700">La CURP es requerida, debe tener 18 caracteres y cumplir con el
                     formato.</small>
                 </div>
               </div>
@@ -62,9 +62,9 @@
                 <div class="basis-1/2">
                   <label>Telefono:</label>
                   <input class="text-slate-800 py-1 px-2 bg-white rounded-sm h-8 w-full" type="text"
-                    formControlName="telefono" id="" maxlength="10" minlength="10">
+                    formControlName="telefono" id="" maxlength="10" minlength="10" (keypress)="soloNumeros($event)">
                   <div *ngIf="formulario.get('telefono')?.invalid && formulario.get('telefono')?.touched">
-                    <small class="text-white">El teléfono es requerido y debe tener 10 dígitos.</small>
+                    <small class="text-gray-700">El teléfono es requerido, debe tener 10 dígitos y solo números.</small>
                   </div>
                 </div>
               </div>
